[package]
name = "test_wasm_webgl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "console",
    "WebGlUniformLocation",
    "WebGlTransformFeedback",
    "WebGlSync",
    "Event",
    "WorkerGlobalScope",
    "MouseEvent",
    "CanvasRenderingContext2d",
    "HtmlParagraphElement",
    "WebGlTexture"] }
console_error_panic_hook = { version = "0.1.1" }
image = "0.25.5"